refact double dash