@@ -8,12 +8,13 @@ import org.junit.jupiter.params.provider.ValueSource;
 
 import java.lang.annotation.Annotation;
 import java.util.Arrays;
+import java.util.List;
 import java.util.function.Function;
 
 import static org.junit.jupiter.api.Assertions.*;
 
 public class OptionParsersTest {
-  static Option option(String value) {
+  static Option option(String value, String fullName) {
     return new Option() {
 
       @Override
@@ -25,41 +26,40 @@ public class OptionParsersTest {
       public String value() {
         return value;
       }
+
+      @Override
+      public String fullName() { return fullName; }
     };
   }
 
   @Test
   public void shouldParseValueWhenParamNameWithDashExisted() {
-    assertEquals(OptionParsers.unary(Integer::parseInt, 0).parse(Arrays.asList("--port", "8080"), option("p"), "port"), 8080);
+    assertEquals(OptionParsers.unary(Integer::parseInt, 0).parse(Arrays.asList("--port", "8080"), option("p", "port")), 8080);
   }
 
   @Nested
   class UnaryOptionParserTest {
     @Test
     public void shouldParseValueIfExisted() {
-      assertEquals(OptionParsers.unary(Integer::parseInt, 0).parse(Arrays.asList("-p", "8080"), option("p"), ""), 8080);
+      assertEquals(OptionParsers.unary(Integer::parseInt, 0).parse(Arrays.asList("-p", "8080"), option("p", "port")), 8080);
     }
 
     @Test
     public void shouldThrowTooManyExceptionWhenValueMoreThenOne() {
-      TooManyArgumentsException exception = assertThrows(TooManyArgumentsException.class, () -> {
-        OptionParsers.unary(Integer::parseInt, 0).parse(Arrays.asList("-p", "8080", "8081"), option("p"), "");
-      });
+      TooManyArgumentsException exception = assertThrows(TooManyArgumentsException.class, () -> OptionParsers.unary(Integer::parseInt, 0).parse(Arrays.asList("-p", "8080", "8081"), option("p", "port")));
       assertEquals(exception.getMessage(), "p");
     }
 
     @ParameterizedTest
     @ValueSource(strings = {"-p", "-p -l"})
     public void shouldThrowInsufficientArgumentExceptionWhenValueIsNotPresent(String arguments) {
-      InsufficientArgumentException exception = assertThrows(InsufficientArgumentException.class, () -> {
-        OptionParsers.unary(Integer::parseInt, 0).parse(Arrays.asList(arguments.split(" ")), option("p"), "");
-      });
+      InsufficientArgumentException exception = assertThrows(InsufficientArgumentException.class, () -> OptionParsers.unary(Integer::parseInt, 0).parse(Arrays.asList(arguments.split(" ")), option("p", "port")));
       assertEquals(exception.getMessage(), "p");
     }
 
     @Test
     public void shouldSetDefaultValueTo0ForIntOption() {
-      assertEquals(OptionParsers.unary(Integer::parseInt, 0).parse(Arrays.asList(), option("p"), ""), 0);
+      assertEquals(OptionParsers.unary(Integer::parseInt, 0).parse(List.of(), option("p", "port")), 0);
     }
   }
 
@@ -67,20 +67,19 @@ public class OptionParsersTest {
   class BooleanOptionParserTest {
     @Test
     public void shouldReturnTrueWhenLoggingIsPresent() {
-      assertTrue(OptionParsers.bool().parse(Arrays.asList("-l"), option("l"), ""));
+      assertTrue(OptionParsers.bool().parse(List.of("-l"), option("l", "logging")));
     }
 
     @Test
     public void shouldThrowTooManyExceptionWhenLoggingParamsExisted() {
-      TooManyArgumentsException exception = assertThrows(TooManyArgumentsException.class, () -> {
-        OptionParsers.bool().parse(Arrays.asList("-l", "logging"), option("l"), "");
-      });
+      TooManyArgumentsException exception = assertThrows(TooManyArgumentsException.class, () ->
+              OptionParsers.bool().parse(Arrays.asList("-l", "logging"), option("l", "logging")));
       assertEquals(exception.getMessage(), "l");
     }
 
     @Test
     public void shouldSetDefaultValueToFalse() {
-      assertFalse(OptionParsers.bool().parse(Arrays.asList(), option("l"), ""));
+      assertFalse(OptionParsers.bool().parse(List.of(), option("l", "logging")));
     }
   }
 
@@ -88,19 +87,19 @@ public class OptionParsersTest {
   class ListOptionParser {
     @Test
     public void shouldParseListValue() {
-      String[] value = OptionParsers.list(String[]::new, String::valueOf).parse(Arrays.asList("-g", "this", "is"), option("g"), "");
+      String[] value = OptionParsers.list(String[]::new, String::valueOf).parse(List.of("-g", "this", "is"), option("g", "group"));
       assertArrayEquals(new String[]{"this", "is"}, value);
     }
 
     @Test
     public void shouldSetDefaultValueToEmptyArray() {
-      String[] value = OptionParsers.list(String[]::new, String::valueOf).parse(Arrays.asList("-g"), option("g"), "");
+      String[] value = OptionParsers.list(String[]::new, String::valueOf).parse(List.of("-g"), option("g", "group"));
       assertEquals(0, value.length);
     }
 
     @Test
     public void shouldNotTreatNegativeIntAsFlag() {
-      Integer[] value = OptionParsers.list(Integer[]::new, Integer::parseInt).parse(Arrays.asList("-g", "-1", "2"), option("g"), "");
+      Integer[] value = OptionParsers.list(Integer[]::new, Integer::parseInt).parse(Arrays.asList("-g", "-1", "2"), option("g", "group"));
       assertArrayEquals(new Integer[]{-1, 2}, value);
     }
 
@@ -109,9 +108,8 @@ public class OptionParsersTest {
       Function<String, String> parser = (it) -> {
         throw new RuntimeException();
       };
-      IllegalOptionException exception = assertThrows(IllegalOptionException.class, () -> {
-        OptionParsers.list(String[]::new, parser).parse(Arrays.asList("-g", "this", "is"), option("g"), "");
-      });
+      IllegalOptionException exception = assertThrows(IllegalOptionException.class, () ->
+              OptionParsers.list(String[]::new, parser).parse(Arrays.asList("-g", "this", "is"), option("g", "group")));
       assertEquals(exception.getMessage(), "g");
       assertEquals(exception.getValue(), "this");
     }
